Bugfix: appbar covered selection boxes
The appbar used to cover the selection boxes inside
the Contacts list. This commit implements the resizing
of the navigationview when the appbar button is pressed.
The resizing is done by modifiying the margin-right property.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,6 +39,13 @@ $active-color: #C35817;
 	}
 }
 
+.x-navigationview-inner {
+	-webkit-transition: margin-right 0.3s;
+	-moz-transition: margin-right 0.3s;
+	-o-transition: margin-right 0.3s;
+	transition: margin-right 0.3s;	
+}
+
 .x-course,
 .x-calendar-event,
 .x-module,
